--- a/main.html
+++ b/main.html
@@ -24,22 +24,42 @@
                 
             </ul>
         </nav>
+    <div class="main-header-bottom">
+        <div class="header-club-logo">
+            <img src="img/realmurcia.png" alt="Logo Real Murcia">
+        </div>
         <h1 class="club-name club-name-large">Real Murcia</h1>
+    </div>
     </header>
-    <section class="content-section container">
-        <h2 class="section-header">About</h2>
-        <img class="about-club-logo" src="img/realmurcia.png" alt="Real Murcia logo"> <!-- put logo image -->
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus asperiores deleniti minus quos, recusandae vel nemo numquam repellat laborum molestiae reiciendis ex quis sit similique! Reiciendis atque, eum consequuntur voluptatum eius modi qui? Obcaecati, architecto iusto. Consequatur ipsa tenetur earum, autem sint eveniet. Vitae modi maiores veritatis quia! Deserunt dolorum consequuntur cupiditate molestias pariatur eligendi architecto, adipisci expedita obcaecati labore, provident nihil. Iste possimus maxime aliquam aperiam tempore suscipit, numquam illum ab accusamus nihil rerum, aliquid eius molestiae excepturi atque placeat eligendi reiciendis enim dicta nesciunt. In quo voluptate autem consectetur sint aliquam! Animi necessitatibus explicabo illum quos sint doloribus.</p>
+        <section class="content-section container">
+        <img class="about-club-logo" src="img/stadiuminside3.jpg" alt="Real Murcia logo">
+        <h2 class="section-header">About the club</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia in quae nulla beatae iusto temporibus modi earum dolorum a, praesentium eligendi voluptas labore amet iste laboriosam cupiditate, neque expedita! Dignissimos sint voluptate repellendus dolores hic corrupti quia eos debitis suscipit vitae laboriosam nam non, aliquam, obcaecati ipsa cum numquam, iste saepe quod expedita labore blanditiis rerum in. Error officia quas nulla sapiente reprehenderit earum dolor ullam doloribus nisi quasi, deserunt, sit aliquam eum laudantium, exercitationem expedita. Accusamus molestiae veritatis explicabo nisi minus hic? Similique corrupti rem quae voluptas sed quasi tenetur dolores, nesciunt deserunt distinctio neque! Quos facilis saepe, officiis quo dignissimos minima magni aut recusandae numquam pariatur amet maiores distinctio est accusantium tenetur quidem odio ipsum adipisci. Fugiat voluptatem cumque, ab esse est incidunt quo quisquam repellendus alias perferendis distinctio soluta numquam exercitationem dolore nihil libero laborum odio quis itaque blanditiis veniam nulla? Est quaerat veniam perspiciatis porro accusantium, odio facilis amet officiis. Incidunt ipsum provident, quae laborum doloremque at, animi dolorum quia asperiores vero quos ullam pariatur, consectetur ea dolorem non. Sapiente rem, assumenda inventore quos debitis iste excepturi maxime nemo deserunt saepe officia doloribus quaerat voluptatem porro soluta, illum architecto vel alias quisquam, laudantium nostrum. Pariatur, vero!</p>
     </section>
-    <aside>
-        <div class="buy-tickets"><a href="https://realmurcia.compralaentrada.com/partidos">Buy tickets</a></div>
-
+    <!--<div class="container-photos">
+            <img src="img/stadiuminside.jpg" alt="Stadium inside"> 
+            <img src="img/stadiuminside2.jpg" alt="Stadium inside"> 
+            <img src="img/stadiuminside3.jpg" alt="Stadium inside"> 
+            <img src="img/stadiuminside4.jpg" alt="Stadium inside"> 
+            <img src="img/pitch.jpg" alt="Pitch"> 
+            <img src="img/real.jpg" alt="Real"> 
+            <img src="img/crowd.jpg" alt="Crowd"> 
+            <img src="img/exit.jpg" alt="Exit"> 
+        </div>-->
+    <aside class="banner">
         <div class="next-game"></div>
         <div class="last-game"></div>
     </aside>
-    <footer class="main footer">
+    <footer class="main-footer">
         <div class="container main-footer-container">
-            <h3 class="club-name">Real Murcia</h3>
+            <div><a class="tickets" href="https://realmurcia.compralaentrada.com/partidos">Buy tickets</a></div>
+            <div class="address">
+                <div class="address-child">REAL MURCIA CF SAD</div>
+                <div class="address-child">Estadio Nueva Condomina</div>
+                <div class="address-child">Avda. del Estadio S/N</div>
+                <div class="address-child">30110 - Churra - Murcia</div>
+                <div class="address-child">Spain</div>
+            </div>
             <ul class="nav footer-nav">
                 <li><a href="https://www.instagram.com/realmurciacf_oficial/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a></li>
                 <li><a href="https://www.youtube.com/channel/UCBF9qLb627UxQ8Q6O9PzTAQ" target="_blank"><img src="img/youtube.png" alt="Youtube"></a></li>
