--- a/history.html
+++ b/history.html
@@ -31,25 +31,8 @@
         <h1 class="club-name club-name-large">Real Murcia</h1>
     </div>
     </header>
-        <section class="content-section container">
-        <img class="about-club-logo" src="img/stadiuminside3.jpg" alt="Real Murcia logo">
-        <h2 class="section-header">About the club</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia in quae nulla beatae iusto temporibus modi earum dolorum a, praesentium eligendi voluptas labore amet iste laboriosam cupiditate, neque expedita! Dignissimos sint voluptate repellendus dolores hic corrupti quia eos debitis suscipit vitae laboriosam nam non, aliquam, obcaecati ipsa cum numquam, iste saepe quod expedita labore blanditiis rerum in. Error officia quas nulla sapiente reprehenderit earum dolor ullam doloribus nisi quasi, deserunt, sit aliquam eum laudantium, exercitationem expedita. Accusamus molestiae veritatis explicabo nisi minus hic? Similique corrupti rem quae voluptas sed quasi tenetur dolores, nesciunt deserunt distinctio neque! Quos facilis saepe, officiis quo dignissimos minima magni aut recusandae numquam pariatur amet maiores distinctio est accusantium tenetur quidem odio ipsum adipisci. Fugiat voluptatem cumque, ab esse est incidunt quo quisquam repellendus alias perferendis distinctio soluta numquam exercitationem dolore nihil libero laborum odio quis itaque blanditiis veniam nulla? Est quaerat veniam perspiciatis porro accusantium, odio facilis amet officiis. Incidunt ipsum provident, quae laborum doloremque at, animi dolorum quia asperiores vero quos ullam pariatur, consectetur ea dolorem non. Sapiente rem, assumenda inventore quos debitis iste excepturi maxime nemo deserunt saepe officia doloribus quaerat voluptatem porro soluta, illum architecto vel alias quisquam, laudantium nostrum. Pariatur, vero!</p>
-    </section>
-    <!--<div class="container-photos">
-            <img src="img/stadiuminside.jpg" alt="Stadium inside"> 
-            <img src="img/stadiuminside2.jpg" alt="Stadium inside"> 
-            <img src="img/stadiuminside3.jpg" alt="Stadium inside"> 
-            <img src="img/stadiuminside4.jpg" alt="Stadium inside"> 
-            <img src="img/pitch.jpg" alt="Pitch"> 
-            <img src="img/real.jpg" alt="Real"> 
-            <img src="img/crowd.jpg" alt="Crowd"> 
-            <img src="img/exit.jpg" alt="Exit"> 
-        </div>-->
-    <aside class="banner">
-        <div class="next-game"></div>
-        <div class="last-game"></div>
-    </aside>
+       <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus, nihil assumenda numquam consequuntur corporis quaerat, repellat quae commodi id sunt voluptatem at illo asperiores corrupti ipsum, tempora iste iusto velit quidem vitae aliquid. Voluptas quas repudiandae, quis non molestiae incidunt nostrum saepe. Ipsam nemo error sit ipsum omnis excepturi! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur in, obcaecati nam dolorum quas odit eaque consectetur dicta! Tempora natus repellendus qui aspernatur voluptates inventore officiis! Obcaecati nobis, facere, quibusdam fuga atque omnis neque optio doloremque molestiae sint architecto qui, facilis voluptates aperiam eveniet laboriosam ex? Eos magni repellat ipsum qui eveniet culpa ducimus sapiente quidem voluptatum rem, soluta nemo voluptate! Obcaecati voluptatem eaque magnam, nobis, ullam ex, excepturi iure magni animi pariatur totam odit esse consectetur dolor quam? Praesentium voluptates voluptatum aut architecto eligendi veniam quisquam. Mollitia, rerum! Consequatur expedita, pariatur dolorem voluptate, voluptates ad aspernatur molestiae perferendis amet voluptatibus quasi totam voluptatum, officiis nisi ipsam. Deleniti saepe ad quia animi eveniet earum iste architecto excepturi aliquam nihil maiores aspernatur atque veniam libero harum enim voluptates dignissimos vitae, aut sed nam sequi. Eius perspiciatis reprehenderit, nulla repellat minus, facilis voluptatum eveniet blanditiis impedit, quibusdam dicta aliquid possimus earum iure ad similique soluta autem provident tenetur architecto expedita consequatur culpa incidunt neque! Aperiam accusantium provident aspernatur perspiciatis quasi, voluptatibus deserunt, itaque maiores repudiandae porro error temporibus ad velit corrupti amet cumque? Veritatis vero impedit illum eligendi temporibus cumque, numquam, necessitatibus dolor molestiae rem quia asperiores architecto eos optio odio et.</div>
+    
     <footer class="main-footer">
         <div class="container main-footer-container">
             <div><a class="tickets" href="https://realmurcia.compralaentrada.com/partidos" target="_blank">Buy tickets</a></div>
