--- a/season.html
+++ b/season.html
@@ -31,25 +31,31 @@
         <h1 class="club-name club-name-large">Real Murcia</h1>
     </div>
     </header>
-        <section class="content-section container">
-        <img class="about-club-logo" src="img/stadiuminside3.jpg" alt="Real Murcia logo">
-        <h2 class="section-header">About the club</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia in quae nulla beatae iusto temporibus modi earum dolorum a, praesentium eligendi voluptas labore amet iste laboriosam cupiditate, neque expedita! Dignissimos sint voluptate repellendus dolores hic corrupti quia eos debitis suscipit vitae laboriosam nam non, aliquam, obcaecati ipsa cum numquam, iste saepe quod expedita labore blanditiis rerum in. Error officia quas nulla sapiente reprehenderit earum dolor ullam doloribus nisi quasi, deserunt, sit aliquam eum laudantium, exercitationem expedita. Accusamus molestiae veritatis explicabo nisi minus hic? Similique corrupti rem quae voluptas sed quasi tenetur dolores, nesciunt deserunt distinctio neque! Quos facilis saepe, officiis quo dignissimos minima magni aut recusandae numquam pariatur amet maiores distinctio est accusantium tenetur quidem odio ipsum adipisci. Fugiat voluptatem cumque, ab esse est incidunt quo quisquam repellendus alias perferendis distinctio soluta numquam exercitationem dolore nihil libero laborum odio quis itaque blanditiis veniam nulla? Est quaerat veniam perspiciatis porro accusantium, odio facilis amet officiis. Incidunt ipsum provident, quae laborum doloremque at, animi dolorum quia asperiores vero quos ullam pariatur, consectetur ea dolorem non. Sapiente rem, assumenda inventore quos debitis iste excepturi maxime nemo deserunt saepe officia doloribus quaerat voluptatem porro soluta, illum architecto vel alias quisquam, laudantium nostrum. Pariatur, vero!</p>
+    <section class="content-section container">
+        <h1 class="section-header">2019/2020 Season calendar</h1>
+        <div>
+            <div class="season-row">
+               <strong class="season-item season-date"> Aug 25, 18:30</strong>
+                <span class="season-item season-game">CÁDIZ CF B - REAL MURCIA</span>
+                <span class="season-item season-result"> <a class="season-result" href="#">2-1</a> </span> 
+            </div>
+            <div class="season-row">
+               <strong class="season-item season-date"> Sep 1, 18:30</strong>
+                <span class="season-item season-game">REAL MURCIA - ALGECIRAS CF</span>
+                <span class="season-item season-result"> <a class="season-result" href="#">1-1</a> </span>  
+            </div>
+            <div class="season-row">
+               <strong class="season-item season-date"> Sep 7, 18:30</strong>
+                <span class="season-item season-game">CORDOBA CF - REAL MURCIA</span>
+                <span class="season-item season-result"> <a class="season-result" href="#">1-0</a> </span> 
+            </div>
+            <div class="season-row">
+               <strong class="season-item season-date"> Sep 15, 18:00</strong>
+                <span class="season-item season-game">REAL MURCIA - SAN FERNANDO CD</span>
+                <span class="season-item season-result"> <a class="season-result" href="#">1-2</a> </span>  
+            </div>
+        </div>
     </section>
-    <!--<div class="container-photos">
-            <img src="img/stadiuminside.jpg" alt="Stadium inside"> 
-            <img src="img/stadiuminside2.jpg" alt="Stadium inside"> 
-            <img src="img/stadiuminside3.jpg" alt="Stadium inside"> 
-            <img src="img/stadiuminside4.jpg" alt="Stadium inside"> 
-            <img src="img/pitch.jpg" alt="Pitch"> 
-            <img src="img/real.jpg" alt="Real"> 
-            <img src="img/crowd.jpg" alt="Crowd"> 
-            <img src="img/exit.jpg" alt="Exit"> 
-        </div>-->
-    <aside class="banner">
-        <div class="next-game"></div>
-        <div class="last-game"></div>
-    </aside>
     <footer class="main-footer">
         <div class="container main-footer-container">
             <div><a class="tickets" href="https://realmurcia.compralaentrada.com/partidos" target="_blank">Buy tickets</a></div>
