--- a/store.html
+++ b/store.html
@@ -31,25 +31,8 @@
         <h1 class="club-name club-name-large">Real Murcia</h1>
     </div>
     </header>
-        <section class="content-section container">
-        <img class="about-club-logo" src="img/stadiuminside3.jpg" alt="Real Murcia logo">
-        <h2 class="section-header">About the club</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia in quae nulla beatae iusto temporibus modi earum dolorum a, praesentium eligendi voluptas labore amet iste laboriosam cupiditate, neque expedita! Dignissimos sint voluptate repellendus dolores hic corrupti quia eos debitis suscipit vitae laboriosam nam non, aliquam, obcaecati ipsa cum numquam, iste saepe quod expedita labore blanditiis rerum in. Error officia quas nulla sapiente reprehenderit earum dolor ullam doloribus nisi quasi, deserunt, sit aliquam eum laudantium, exercitationem expedita. Accusamus molestiae veritatis explicabo nisi minus hic? Similique corrupti rem quae voluptas sed quasi tenetur dolores, nesciunt deserunt distinctio neque! Quos facilis saepe, officiis quo dignissimos minima magni aut recusandae numquam pariatur amet maiores distinctio est accusantium tenetur quidem odio ipsum adipisci. Fugiat voluptatem cumque, ab esse est incidunt quo quisquam repellendus alias perferendis distinctio soluta numquam exercitationem dolore nihil libero laborum odio quis itaque blanditiis veniam nulla? Est quaerat veniam perspiciatis porro accusantium, odio facilis amet officiis. Incidunt ipsum provident, quae laborum doloremque at, animi dolorum quia asperiores vero quos ullam pariatur, consectetur ea dolorem non. Sapiente rem, assumenda inventore quos debitis iste excepturi maxime nemo deserunt saepe officia doloribus quaerat voluptatem porro soluta, illum architecto vel alias quisquam, laudantium nostrum. Pariatur, vero!</p>
-    </section>
-    <!--<div class="container-photos">
-            <img src="img/stadiuminside.jpg" alt="Stadium inside"> 
-            <img src="img/stadiuminside2.jpg" alt="Stadium inside"> 
-            <img src="img/stadiuminside3.jpg" alt="Stadium inside"> 
-            <img src="img/stadiuminside4.jpg" alt="Stadium inside"> 
-            <img src="img/pitch.jpg" alt="Pitch"> 
-            <img src="img/real.jpg" alt="Real"> 
-            <img src="img/crowd.jpg" alt="Crowd"> 
-            <img src="img/exit.jpg" alt="Exit"> 
-        </div>-->
-    <aside class="banner">
-        <div class="next-game"></div>
-        <div class="last-game"></div>
-    </aside>
+       <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut distinctio officia dignissimos. Unde iusto voluptas eos molestias quos totam. Reprehenderit, eveniet natus, suscipit nulla enim laboriosam, placeat numquam illo repellat voluptatum dolore velit. Ipsam officia quia eligendi repudiandae dolorum facilis, mollitia quidem? Voluptates voluptatem obcaecati iste quidem itaque animi, quod possimus est reprehenderit porro consequatur amet, quae at sint nisi commodi nam. Magni perferendis iste cum soluta pariatur facilis, odit incidunt dolor minus laudantium? Sit eveniet neque odit consectetur, voluptas magnam rerum, cum unde dolorum commodi sint quasi quaerat asperiores ad eos placeat. Praesentium, non? Adipisci maxime voluptatum iure blanditiis, beatae vel voluptates perferendis sit voluptate deleniti! Eligendi quos optio doloribus modi minima ipsum harum molestiae ducimus dolorum eveniet sapiente natus minus, quis omnis tempora, assumenda placeat vel obcaecati vitae. Ipsum veritatis voluptatibus dolorum neque sint pariatur labore est reiciendis sequi laudantium. Laudantium, est debitis sequi ab ut illo magnam minima voluptas cumque inventore amet quis repudiandae odio voluptatibus ratione enim eligendi? Quos facilis itaque earum deleniti ipsum, molestiae in, veritatis voluptas hic vero laboriosam, incidunt a quisquam porro? Numquam nam odit excepturi officia, quasi in saepe quaerat eligendi pariatur delectus obcaecati, vitae tempore quisquam illum, quod dolor eius. Repellendus?</div>
+    
     <footer class="main-footer">
         <div class="container main-footer-container">
             <div><a class="tickets" href="https://realmurcia.compralaentrada.com/partidos" target="_blank">Buy tickets</a></div>
