--- a/season.html
+++ b/season.html
@@ -34,10 +34,15 @@
     <section class="content-section container">
         <h1 class="section-header">2019/2020 Season calendar</h1>
         <div>
+                <div class="season-row">
+                        <strong class="season-item season-date"> Date</strong>
+                         <span class="season-item season-game">Opponent</span>
+                         <span class="season-item season-result"> Score </span> 
+                     </div>
             <div class="season-row">
                <strong class="season-item season-date"> Aug 25, 18:30</strong>
                 <span class="season-item season-game">CÁDIZ CF B - REAL MURCIA</span>
-                <span class="season-item season-result"> <a class="season-result" href="#">2-1</a> </span> 
+                <span class="season-item season-result"> <a class="season-result" href="https://www.realmurcia.es/noticia/dos-goles-en-el-tramo-final-evitan-puntuar-en-el-inicio-liguero" target="_blank">2-1</a> </span> 
             </div>
             <div class="season-row">
                <strong class="season-item season-date"> Sep 1, 18:30</strong>
