--- a/season.html
+++ b/season.html
@@ -32,33 +32,74 @@
     </div>
     </header>
     <section class="content-section container">
-        <h1 class="section-header">2019/2020 Season calendar</h1>
+        <h1 class="section-header">Segunda B group IV - 2019/2020 Season Fixtures</h1>
         <div>
                 <div class="season-row">
+                        <strong class="season-item season-matchday"> Matchday</strong>
                         <strong class="season-item season-date"> Date</strong>
                          <span class="season-item season-game">Opponent</span>
                          <span class="season-item season-result"> Score </span> 
                      </div>
             <div class="season-row">
+                <strong class="season-item season-matchday"> 1</strong>
                <strong class="season-item season-date"> Aug 25, 18:30</strong>
                 <span class="season-item season-game">CÁDIZ CF B - REAL MURCIA</span>
-                <span class="season-item season-result"> <a class="season-result" href="https://www.realmurcia.es/noticia/dos-goles-en-el-tramo-final-evitan-puntuar-en-el-inicio-liguero" target="_blank">2-1</a> </span> 
+                <span class="season-item season-result"> <a title="Click to see the highlights!" class="season-result" href="season/game1.html" target="_blank">2-1</a> </span> 
             </div>
             <div class="season-row">
+                <strong class="season-item season-matchday"> 2</strong>
                <strong class="season-item season-date"> Sep 1, 18:30</strong>
                 <span class="season-item season-game">REAL MURCIA - ALGECIRAS CF</span>
-                <span class="season-item season-result"> <a class="season-result" href="#">1-1</a> </span>  
+                <span class="season-item season-result"> <a title="Click to see the highlights!" class="season-result" href="season/game2.html">1-1</a> </span>  
             </div>
             <div class="season-row">
+                <strong class="season-item season-matchday"> 3</strong>
                <strong class="season-item season-date"> Sep 7, 18:30</strong>
                 <span class="season-item season-game">CORDOBA CF - REAL MURCIA</span>
-                <span class="season-item season-result"> <a class="season-result" href="#">1-0</a> </span> 
+                <span class="season-item season-result"> <a title="Click to see the highlights!" class="season-result" href="season/game3.html">1-0</a> </span> 
             </div>
             <div class="season-row">
+                <strong class="season-item season-matchday"> 4</strong>
                <strong class="season-item season-date"> Sep 15, 18:00</strong>
                 <span class="season-item season-game">REAL MURCIA - SAN FERNANDO CD</span>
-                <span class="season-item season-result"> <a class="season-result" href="#">1-2</a> </span>  
+                <span class="season-item season-result"> <a title="Click to see the highlights!" class="season-result" href="season/game4.html">1-2</a> </span>  
             </div>
+            <div class="season-row">
+                <strong class="season-item season-matchday"> 5</strong>
+                <strong class="season-item season-date"> Sep 22, 19:00</strong>
+                 <span class="season-item season-game">CF TALAVERA DE LA REINA - REAL MURCIA</span>
+                 <span class="season-item season-result"> <a title="Click to see the highlights!" class="season-result" href="season/game5.html">1-2</a> </span>  
+             </div>
+             <div class="season-row">
+                    <strong class="season-item season-matchday"> 6</strong>
+                    <strong class="season-item season-date"> Sep 29, 17:30</strong>
+                     <span class="season-item season-game">REAL MURCIA - CP VILLARROBLEDO</span>
+                     <span class="season-item season-result"> <a title="Click to see the highlights!" class="season-result" href="season/game6.html">3-0</a> </span>  
+            </div>
+                 <div class="season-row">
+                        <strong class="season-item season-matchday"> 7</strong>
+                        <strong class="season-item season-date"> Oct 6, 12:00</strong>
+                         <span class="season-item season-game">UCAM MURCIA CF - REAL MURCIA</span>
+                         <span class="season-item season-result"> <a title="Click to see the highlights!" class="season-result" href="season/game7.html">3-0</a> </span>  
+                </div>
+                <div class="season-row">
+                        <strong class="season-item season-matchday"> 8</strong>
+                        <strong class="season-item season-date"> Oct 13, 17:30</strong>
+                         <span class="season-item season-game">REAL MURCIA - MÉRIDA AD</span>
+                         <span class="season-item season-result"> <a title="Click to see the highlights!" class="season-result" href="season/game8.html">1-0</a> </span>  
+                </div>
+                <div class="season-row">
+                        <strong class="season-item season-matchday"> 9</strong>
+                        <strong class="season-item season-date"> Oct 20, 18:00</strong>
+                         <span class="season-item season-game">CD DON BENITO - REAL MURCIA</span>
+                         <span class="season-item season-result"> <a title="Click to see the highlights!" class="season-result" href="season/game9.html">2-1</a> </span>  
+                </div>
+                <div class="season-row">
+                        <strong class="season-item season-matchday"> 10</strong>
+                        <strong class="season-item season-date"> Oct 27, 17:00</strong>
+                         <span class="season-item season-game">REAL MURCIA - ATLÉTICO SANLUQUEÑO</span>
+                         <span class="season-item season-result">---</a> </span>  
+                </div>
         </div>
     </section>
     <footer class="main-footer">
