First team fixed

--- a/firstteam.html
+++ b/firstteam.html
@@ -32,8 +32,9 @@
         <h1 class="club-name club-name-large">Real Murcia</h1>
     </div>
     </header>
+    <section class="content-section container">
        <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur in, obcaecati nam dolorum quas odit eaque consectetur dicta! Tempora natus repellendus qui aspernatur voluptates inventore officiis! Obcaecati nobis, facere, quibusdam fuga atque omnis neque optio doloremque molestiae sint architecto qui, facilis voluptates aperiam eveniet laboriosam ex? Eos magni repellat ipsum qui eveniet culpa ducimus sapiente quidem voluptatum rem, soluta nemo voluptate! Obcaecati voluptatem eaque magnam, nobis, ullam ex, excepturi iure magni animi pariatur totam odit esse consectetur dolor quam? Praesentium voluptates voluptatum aut architecto eligendi veniam quisquam. Mollitia, rerum! Consequatur expedita, pariatur dolorem voluptate, voluptates ad aspernatur molestiae perferendis amet voluptatibus quasi totam voluptatum, officiis nisi ipsam. Deleniti saepe ad quia animi eveniet earum iste architecto excepturi aliquam nihil maiores aspernatur atque veniam libero harum enim voluptates dignissimos vitae, aut sed nam sequi. Eius perspiciatis reprehenderit, nulla repellat minus, facilis voluptatum eveniet blanditiis impedit, quibusdam dicta aliquid possimus earum iure ad similique soluta autem provident tenetur architecto expedita consequatur culpa incidunt neque! Aperiam accusantium provident aspernatur perspiciatis quasi, voluptatibus deserunt, itaque maiores repudiandae porro error temporibus ad velit corrupti amet cumque? Veritatis vero impedit illum eligendi temporibus cumque, numquam, necessitatibus dolor molestiae rem quia asperiores architecto eos optio odio et.</div>
-    
+    </section>
     <footer class="main-footer">
         <div class="container main-footer-container">
             <div><a class="tickets" href="https://realmurcia.compralaentrada.com/partidos" target="_blank">Buy tickets</a></div>
