--- a/season.html
+++ b/season.html
@@ -12,7 +12,7 @@
     <header class="main-header">
         <nav class="nav main-nav">
             <ul>
-                <li> <a href="main.html">Home</a></li>
+                <li> <a href="index.html">Home</a></li>
                 <li> <a href="history.html">History</a></li>
                 <li> <a href="firstteam.html">First team</a>
                    <!-- <ul class="list-first-team">
@@ -21,7 +21,7 @@
                     </ul> -->
                 </li>
                 <li> <a href="season.html">Season</a></li>
-                <li> <a href="store.html">Store</a></li>
+                <li> <a href="https://store.realmurcia.es/">Store</a></li>
                 
             </ul>
         </nav>
